# aoc2025

./: .gitignore  pyproject.toml
src/aoc/: __init__.py  day1.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
